# stm32-std-starter

./: .gitignore  CMakeLists.txt  openocd.cfg
Core/Src/: core_cm3.c  main.c
User/Driver/Inc/: key.h
User/Driver/Src/: OLED.c  key.c
User/Inc/: main.h
User/Src/: delay.c  main.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32std/: CMakeLists.txt
